--- a/www/index.html
+++ b/www/index.html
@@ -18,14 +18,31 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
   </head>
-  <body ng-app="starter">
+  <body ng-app="shopsty" ng-controller="AppController">
+    <ion-side-menus>
 
-    <ion-pane>
-      <ion-header-bar class="bar-stable">
-        <h1 class="title">Ionic Blank Starter</h1>
-      </ion-header-bar>
-      <ion-content>
-      </ion-content>
-    </ion-pane>
+      <!-- Center content -->
+      <ion-side-menu-content>
+        <ion-header-bar class="bar-dark">
+          <button class="button button-icon" ng-click="toggleMenu()">
+            <i class="icon ion-navicon"></i>
+          </button>
+          <h1 class="title">Shopsty</h1>
+        </ion-header-bar>
+        <ion-content scroll="false">
+
+        </ion-content>
+      </ion-side-menu-content>
+
+      <!-- Left menu -->
+      <ion-side-menu side="left">
+        <ion-header-bar class="bar-dark">
+          <h1 class="title">Settings</h1>
+        </ion-header-bar>
+        <ion-content scroll="false">
+
+        </ion-content>
+      </ion-side-menu>
+    </ion-side-menus>
   </body>
 </html>
