Clear packs button and function

--- a/www/index.html
+++ b/www/index.html
@@ -41,7 +41,7 @@
       <!-- Left menu -->
       <ion-side-menu side="left">
         <ion-header-bar class="bar-dark">
-          <button class="button button-icon">
+          <button class="button button-icon" ng-click="clearPacks()">
             <i class="icon ion-trash-a"></i>
           </button>
           <h1 class="title">Settings</h1>
